Aims to fix issue of picture behind video

--- a/css/custom.css
+++ b/css/custom.css
@@ -84,21 +84,34 @@
 }
 /* ---------------------Cellphones widths-------------------------- */
 
-@media only screen and (min-width: 767px) and (max-width: 1000px) {
+@media only screen and (min-width: 931px) and (max-width: 1000px) {
+
+}
+
+
+
+@media only screen and (min-width: 767px) and (max-width: 931px) {
 
   .cellphone-video video {
     display: inline-block;
     height: 100%;
   }
+
   #intro[style] h1 {
     font-size: 350% !important;
     margin-top: 57%;
     font-weight: lighter;
     font-family: 'Lato', 'Arial', sans-serif;
-    /* default follows: */
-    /* font-size: 420%;
-    font-weight: 390; */
+    background: 
    }
+
+   #intro[style] {
+    background-image: none !important;
+    /* height: 20vh !important; */
+    background: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(black), color-stop(rgb(45, 43, 43)), color-stop(rgb(89, 84, 84)), to(white)) !important;
+    background: linear-gradient(black, black, rgb(45, 43, 43), rgb(89, 84, 84), white) !important;
+    font-family: 'Lato', 'Arial', sans-serif;
+  }
 
   .overlay .italic {
     display: none;
